<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
        <Button
            android:id="@+id/btnArtistList"
            android:layout_width="fill_parent"
            android:layout_height="10mm"
            android:text="@string/btn_artist_list"
            />
        <Button
            android:id="@+id/btnAlbumList"
            android:layout_width="fill_parent"
            android:layout_height="10mm"
            android:text="@string/btn_album_list"
            />
        <Button
            android:id="@+id/btnSongList"
            android:layout_width="fill_parent"
            android:layout_height="10mm"
            android:text="@string/btn_song_list"
            />
</LinearLayout>

