<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
        <Spinner
            android:id="@+id/Encoding"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/encoding_prompt"
            />
    <EditText
            android:id="@+id/Title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            />
    <Button
            android:id="@+id/UpdateTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_update_title"
        />
    <EditText
            android:id="@+id/Album"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            />
    <Button
            android:id="@+id/UpdateAlbum"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_update_album"
        />
    <EditText
            android:id="@+id/Artist"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            />
    <Button
            android:id="@+id/UpdateArtist"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_update_artist"
        />
</LinearLayout>

